examples/test/testpolicy8038.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8038
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key31: value10
      key24: value48
      key22: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value32
          key0: value43
      podSelector:
        matchLabels:
          key36: value44
          key27: value26
